# taichi-mpm-lbm

./: .gitignore  .gitmodules  LICENSES.md  README.md  pyproject.toml
data/reference/: README.md  coupled_drift_reference.json  coupling_stability_reference.json  immersed_boundary_contact_reference.json  lbm_force_response_reference.json  lbm_periodic_mass_reference.json  mpm_gravity_reference.json
docs/: README.md  immersed_boundary_contact.md  postprocessing.md  reference_validation.md
docs/goals/: STEP10_VISUALIZATION_POSTPROCESSING_GOAL.md  STEP11_REFERENCE_DATA_VALIDATION_GOAL.md  STEP12_IMMERSED_BOUNDARY_CONTACT_GOAL.md  STEP1_PROJECT_SKELETON_GOAL.md  (+8 more)
examples/: README.md  __init__.py  coupled_output_snapshot.py  coupled_penalty_smoke.py  coupling_stability_boundary.py  generate_reference_data.py  immersed_boundary_contact_smoke.py  lbm_local_force.py  lbm_standalone.py  mpm_standalone_cube.py  postprocess_snapshots.py  postprocess_validation_summary.py  reference_validation_suite.py  smoke_import.py  validation_benchmark_suite.py
fsi/: __init__.py  config.py  coupling.py  io.py  lbm3d.py  mpm3d.py  output.py  postprocess.py  reference.py  reference_cases.py  simulation.py  units.py  validation.py  validation_cases.py
scripts/: README.md
tests/: __init__.py  conftest.py  test_config.py  test_coupled_validation.py  test_coupling.py  test_coupling_stability.py  test_immersed_boundary_contact.py  test_import.py  test_lbm3d.py  test_mpm3d.py  test_output.py  test_postprocess.py  test_reference_validation.py  test_simulation.py  test_validation_benchmarks.py
